--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,11 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+# PhpStorm
 .idea
+
+#
+/public/js
+/public/css
+/public/mix-manifest.json
