--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "sass-loader": "7.*"
     },
     "dependencies": {
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.3",
+        "vuetify": "^2.1.13"
     }
 }
