--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "devDependencies": {
         "axios": "^0.19.2",
         "cross-env": "^5.1",
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-vue": "^6.2.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "prettier": "^2.0.2",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.26.3",
         "sass-loader": "7.*",
