--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-vue": "^6.2.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
